链路追踪，代码简化，sql表优化